--- a/services/docker-compose.yaml
+++ b/services/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 
-name: mlops-services
+#name: mlops-services
 
 services:
   mlflow:
@@ -9,6 +9,8 @@ services:
       dockerfile: mlflow.Dockerfile
     image: mlflow-server:v0.1
     container_name: mlflow_server
+    env_file:
+      - .env
     ports:
       - 5000:5000
     #command: mlflow server --backend-store-uri postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:${POSTGRES_PORT}/${MLFLOW_DB} --default-artifact-root /mlflow/artifacts --host 0.0.0.0 
