Improve infraestructure deployment

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ infraestructure/ec2_key_pair.pem
 terraform.tfstate
 infraestructure/.terraform.tfstate.lock.info
 infraestructure/aws_vars.tfvars
+services/.env
